# doc-hut-data

./: README.md  pyproject.toml
data/: places.json
data/facility/: facility_2364.json  facility_2365.json  facility_2366.json  facility_2367.json  facility_2370.json  facility_2371.json  facility_2372.json  facility_2373.json  facility_2374.json  facility_2375.json  facility_2382.json  facility_2383.json  facility_2399.json  facility_2401.json  facility_2402.json  facility_2403.json  facility_2404.json  facility_2407.json  facility_2408.json  facility_2409.json  facility_2410.json  facility_2412.json  facility_2413.json  facility_2415.json  facility_2416.json  facility_2417.json  facility_2418.json  facility_2420.json  facility_2421.json  facility_2422.json  facility_2423.json  facility_2424.json  facility_2425.json  facility_2428.json  facility_2429.json  facility_2430.json  facility_2431.json  facility_2433.json  facility_2434.json  facility_2441.json  (+340 more)
src/doc_hut_data/: __init__.py  hut_scraper.py  schema.py
src/doc_hut_data/scripts/: generate_facililty_data.py
