[project]
name = "doc-hut-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mrmattwright", email = "matt@sudden.co.nz" }
]
requires-python = ">=3.11.8"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
